--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <aside>
             <p>Projects:</p>
-            <button id="btn-create-project">create project</button>
+            <button id="btn-create-project">+</button>
             <div id="list-project">
                 
             </div>
